try avoid permgen issues in the integration tests